Prevent odd horizontal scrolling on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -369,4 +369,8 @@ th {
     .navbar a {
         float: left;
     }
+
+    img {
+        width: 100%;
+    }
 }
